--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                             <a href="#contact" class="btn hire-me">Hire Me</a>
                         </div>
                         <div class="home-img padd-15">
-                            <img src="./public/images/userimg.png alt="">
+                            <img src="./images/userimg.png" alt="">
                         </div>
                     </div>
                 </div>
@@ -344,7 +344,7 @@
                          <div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <img src="./public/images/htmlproject.png" alt="">
+                                    <img src="./images/htmlproject.png" alt="">
                                 </div>
                             </div>
                         </div>
@@ -353,7 +353,7 @@
                         <div class="portfolio-item padd-15">
                            <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <img src="./public/images/htmlproject.png" alt="">
+                                    <img src="./images/htmlproject.png" alt="">
                                 </div>
                             </div>
                         </div>
@@ -362,7 +362,7 @@
                         <div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <img src="./public/images/htmlproject.png" alt="">
+                                    <img src="./images/htmlproject.png" alt="">
                                 </div>
                             </div>
                         </div>
