--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
                             <div class="portfolio-item padd-15">
                                 <div class="portfolio-item-inner shadow-dark">
                                     <div class="portfolio-img">
-                                        <img src="./public/images/htmlproject.png" alt="">
+                                        <img src="./images/htmlproject.png" alt="">
                                     </div>
                                 </div>
                             </div>
